--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -3,9 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>First Angular Lesson</title>
+    <script src="app.js" charset="utf-8"></script>
   </head>
   <body>
-      <h1>First Angular Lesson 101</h1>
-      <h2>From Coursera</h2>
+      <h1>Angular Lesson 101</h1>
+      <h3>Low Cohesion and Tight Coupling</h3>
+      <div class="">
+        <h5>Your Name</h5>
+        <input type="text" name="myname" id="myname">
+      </div>
+      <div id="output">
+
+      </div>
   </body>
 </html>
