--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -2,18 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>First Angular Lesson</title>
-    <script src="app.js" charset="utf-8"></script>
+    <script src="app.js"></script>
+    <script src="angular.min.js" charset="utf-8"></script>
+    <style>body { font-size: 1.5em; }</style>
+    <title>Lecture 02 - Single Page Web Applications with AngularJS</title>
   </head>
   <body>
-      <h1>Angular Lesson 101</h1>
-      <h3>Low Cohesion and Tight Coupling</h3>
-      <div class="">
-        <h5>Your Name</h5>
-        <input type="text" name="myname" id="myname">
+    <h1>Low Cohesion and Tight Coupling</h1>
+    <div id="nameCalculator">
+      <div>
+        Your name: <input type="text" id="name">
       </div>
-      <div id="output">
-
-      </div>
+      <div id="output"></div>
+    </div>
   </body>
 </html>
