-Added Angular JS -Added a controller "MyController" into "myFirstApp"

--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="myFirstApp">
   <head>
     <meta charset="utf-8">
     <script src="app.js"></script>
@@ -8,12 +8,9 @@
     <title>Lecture 02 - Single Page Web Applications with AngularJS</title>
   </head>
   <body>
-    <h1>Low Cohesion and Tight Coupling</h1>
-    <div id="nameCalculator">
-      <div>
-        Your name: <input type="text" id="name">
-      </div>
-      <div id="output"></div>
+    <div ng-controller="MyController">
+
+
     </div>
   </body>
 </html>
