--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
-<html ng-app="myFirstApp">
+<html>
   <head>
     <meta charset="utf-8">
-    <script src="app.js"></script>
-    <script src="angular.min.js" charset="utf-8"></script>
-    <style>body { font-size: 1.5em; }</style>
-    <title>Lecture 02 - Single Page Web Applications with AngularJS</title>
+    <title>My first AngularJS App</title>
   </head>
   <body>
-    <div ng-controller="MyController">
-
+    <div>
 
     </div>
   </body>
