--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="myFirstApp">
   <head>
     <meta charset="utf-8">
     <title>My first AngularJS App</title>
+    <script src="angular.min.js" charset="utf-8"></script>
+    <script src="app.js" charset="utf-8"></script>
   </head>
   <body>
-    <div>
-
+    <h1>My First AngularJS App</h1>
+    <div ng-controller="MyFirstController">
+        <input type="text" ng-model="name">
+        {{ sayHello(name) }}
     </div>
   </body>
 </html>
