--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="myFirstApp">
+<html ng-app="NameCalculator">
   <head>
     <meta charset="utf-8">
     <title>My first AngularJS App</title>
@@ -7,10 +7,13 @@
     <script src="app.js" charset="utf-8"></script>
   </head>
   <body>
-    <h1>My First AngularJS App</h1>
-    <div ng-controller="MyFirstController">
-        <input type="text" ng-model="name">
-        {{ sayHello(name) }}
+    <h1>My Second AngularJS App - Name Calculator</h1>
+    <div ng-controller="NameController">
+        <label for="name">Your Name</label>
+        <input type="text" ng-model="name" ng-keyup="displayNumeric();">
+        <br>
+        <div>{{ sayHello(name) }}</div>
+        <div>Total Numeric value of your name is: {{ value }}</div>
     </div>
   </body>
 </html>
