Changed App and Controller Names

--- a/assignments/assignment1/solution/index.html
+++ b/assignments/assignment1/solution/index.html
@@ -11,8 +11,8 @@
       .message { font-size: 1.3em; font-weight: bold; }
     </style>
   </head>
-<body ng-app="lunchAnalyst">
-   <div class="container" ng-controller="itemCalculator">
+<body ng-app="LunchCheck">
+   <div class="container" ng-controller="LunchCheckController">
      <h1>Lunch Checker</h1>
 
          <div class="form-group">
